--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,9 +12,28 @@ header h1 {
   color: #fff;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem;
+  font-size: 1.4rem;
+  color: #344f55;
+}
+
+footer .copyright {
+  font-size: 1.2rem;
+  color: #ccc;
+}
+
 @media screen and (max-width: 760px) {
   header h1 {
     font-size: 2.5rem;
     text-align: center;
+  }
+
+  footer {
+    font-size: 1.2rem;
   }
 }
