--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,10 @@ footer .copyright {
   color: #ccc;
 }
 
+.loading {
+  font-size: 2rem;
+}
+
 @media screen and (max-width: 760px) {
   header h1 {
     font-size: 2.5rem;
