--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,8 +27,14 @@ footer .copyright {
   color: #ccc;
 }
 
-.loading {
-  font-size: 2rem;
+.loading,
+.fetch-error {
+  font-size: 1.5rem;
+  margin-left: 2rem;
+}
+
+.fetch-error {
+  color: rgb(166, 79, 79);
 }
 
 @media screen and (max-width: 760px) {
