--- a/client/src/components/NoteForm/NoteForm.css
+++ b/client/src/components/NoteForm/NoteForm.css
@@ -1,7 +1,7 @@
 .create-note {
   position: relative;
   width: 40%;
-  margin: 3rem auto 2rem auto;
+  margin: 2rem auto;
   padding: 1.5rem;
   background: #fff;
   border-radius: 7px;
@@ -42,6 +42,13 @@
   margin-top: 1rem;
 }
 
+.create-note-title {
+  font-size: 2.5rem;
+  text-align: center;
+  color: #0b2025;
+  margin-top: 1.5rem;
+}
+
 @media screen and (max-width: 760px) {
   .create-note {
     width: 70%;
@@ -61,5 +68,9 @@
 
   .addnote-error {
     font-size: 1.3rem;
+  }
+
+  .create-note-title {
+    font-size: 2rem;
   }
 }
