--- a/client/src/components/Note/Note.css
+++ b/client/src/components/Note/Note.css
@@ -6,21 +6,23 @@
 }
 
 .note {
-  width: 20%;
+  width: 300px;
+  height: 200px;
   padding: 1rem;
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
   margin: 2rem;
   float: left;
+  overflow: auto;
 }
 
-.note title {
+.note .title {
   font-size: 1.5rem;
   margin-bottom: 0.6rem;
 }
 
-.note content {
+.note .content {
   font-size: 1.5rem;
   margin-bottom: 1rem;
   word-wrap: break-word;
@@ -48,8 +50,14 @@
 }
 
 @media screen and (max-width: 760px) {
+  .notes {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .note {
-    width: 40%;
+    width: 200px;
+    height: 200px;
     margin: 1rem;
   }
 
