--- a/client/src/components/Note/Note.css
+++ b/client/src/components/Note/Note.css
@@ -9,7 +9,7 @@
   width: 300px;
   height: 200px;
   padding: 1rem;
-  background: #fff;
+  background: #b7d1cb;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
   margin: 2rem;
@@ -20,12 +20,14 @@
 .note .title {
   font-size: 1.5rem;
   margin-bottom: 0.6rem;
+  color: #58379a;
 }
 
 .note .content {
   font-size: 1.5rem;
   margin-bottom: 1rem;
   word-wrap: break-word;
+  color: #2a184e;
 }
 
 .note button {
