--- a/client/src/components/NoteForm/NoteForm.css
+++ b/client/src/components/NoteForm/NoteForm.css
@@ -3,9 +3,10 @@
   width: 40%;
   margin: 2rem auto;
   padding: 1.5rem;
-  background: #fff;
+  background: hsl(193, 15%, 66%);
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
+  color: #104957;
 }
 
 .create-note input,
@@ -16,7 +17,9 @@
   outline: none;
   font-family: inherit;
   font-size: 1.5rem;
+  color: inherit;
   resize: none;
+  background: inherit;
 }
 
 .create-note button {
@@ -45,7 +48,7 @@
 .create-note-title {
   font-size: 2.5rem;
   text-align: center;
-  color: #0b2025;
+  color: #3a1d73;
   margin-top: 1.5rem;
 }
 
