Change color theme for app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 header {
-  background-color: #104957;
+  background-color: #f5ba13;
   margin: auto -1.6rem;
   padding: 1.6rem 3.2rem;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
