--- a/client/src/components/NoteForm/NoteForm.css
+++ b/client/src/components/NoteForm/NoteForm.css
@@ -3,10 +3,9 @@
   width: 40%;
   margin: 2rem auto;
   padding: 1.5rem;
-  background: hsl(193, 15%, 66%);
+  background: #fff;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
-  color: #104957;
 }
 
 .create-note input,
@@ -19,7 +18,6 @@
   font-size: 1.5rem;
   color: inherit;
   resize: none;
-  background: inherit;
 }
 
 .create-note button {
@@ -29,7 +27,7 @@
   width: 30px;
   height: 30px;
   font-size: 2rem;
-  background-color: #104957;
+  background-color: #f5ba13;
   color: #fff;
   border-radius: 50%;
   border: none;
@@ -50,6 +48,9 @@
   text-align: center;
   color: #3a1d73;
   margin-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 760px) {
