--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,6 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #a4a3a5;
+  background-color: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
