--- a/client/src/components/Note/Note.css
+++ b/client/src/components/Note/Note.css
@@ -8,7 +8,7 @@
 .note {
   width: 300px;
   height: 200px;
-  padding: 1rem;
+  padding: 1.5rem;
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
@@ -17,12 +17,17 @@
   overflow: auto;
 }
 
+.note-header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .note .title {
   font-size: 1.5rem;
   margin-bottom: 0.6rem;
 }
 
-.note .content {
+.note-content {
   font-size: 1.5rem;
   margin-bottom: 1rem;
   word-wrap: break-word;
