--- a/client/src/pages/UserAuth/auth.css
+++ b/client/src/pages/UserAuth/auth.css
@@ -1,4 +1,5 @@
-.signup-form {
+.signup-form,
+.login-form {
   width: 800px;
   height: 50vh;
   display: flex;
@@ -12,7 +13,7 @@
   margin-top: 2rem;
 }
 
-.signup-title {
+.auth-title {
   text-align: center;
   font-size: 4rem;
   margin-bottom: 2rem;
@@ -48,7 +49,8 @@
   cursor: pointer;
 }
 
-form button {
+.signup-form button,
+.login-form button {
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
@@ -72,7 +74,8 @@ form button {
     margin-right: -3rem;
   }
 
-  .signup-form {
+  .signup-form,
+  .login-form {
     width: 350px;
     padding: 1.5rem 1rem;
   }
