--- a/client/src/pages/UserAuth/auth.css
+++ b/client/src/pages/UserAuth/auth.css
@@ -59,7 +59,7 @@
   border-radius: 10px;
   outline: none;
   cursor: pointer;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .user-error {
@@ -67,6 +67,11 @@
   font-size: 2rem;
   color: rgb(206, 106, 106);
   margin-bottom: 2rem;
+}
+
+.signup-link {
+  margin-top: 1rem;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 760px) {
